added register to sql

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -28,7 +28,7 @@
                     </div>
                     <button href="#dashboard" onclick="showContainerIndex('dashboard')" class="menu-options-home-dashboard">
                         <div class="menu-options-home-dashboard-icon">
-                            <img src="../../Images/dashboard-logo.png">
+                            <img src="../Images/dashboard-logo.png">
                         </div>
                         <div class="menu-options-home-dashboard-text">
                             <p>Dashboard</p>
@@ -36,7 +36,7 @@
                     </button>
                     <button href="#mycameras" onclick="showContainerIndex('mycameras')" class="menu-options-home-camera">
                         <div class="menu-options-home-camera-icon">
-                            <img src="../../Images/camera-logo.png">
+                            <img src="../Images/camera-logo.png">
                         </div>
                         <div class="menu-options-home-camera-text">
                             <p>My Cameras</p>
@@ -50,7 +50,7 @@
                     </div>
                     <button href="#general" onclick="showContainerIndex('general')" class="menu-options-settings-general">
                         <div class="menu-options-settings-general-icon">
-                            <img src="../../Images/general-logo.png">
+                            <img src="../Images/general-logo.png">
                         </div>
                         <div class="menu-options-settings-general-text">
                             <p>General</p>
@@ -58,7 +58,7 @@
                     </button>
                     <button href="#security" onclick="showContainerIndex('security')" class="menu-options-settings-security">
                         <div class="menu-options-settings-security-icon">
-                            <img src="../../Images/security-logo.png">
+                            <img src="../Images/security-logo.png">
                         </div>
                         <div class="menu-options-settings-security-text">
                             <p>Security</p>
@@ -66,7 +66,7 @@
                     </button>
                     <button href="#contacts" onclick="showContainerIndex('contacts')" class="menu-options-settings-alert">
                         <div class="menu-options-settings-alert-icon">
-                            <img src="../../Images/alert-logo.png">
+                            <img src="../Images/alert-logo.png">
                         </div>
                         <div class="menu-options-settings-alert-text">
                             <p>Alert Contacts</p>
@@ -77,13 +77,13 @@
 
             <div class="social-network">
                 <div class="social-network-image">
-                    <img src="../../Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
                 <div class="social-network-image">
-                    <img src="../../Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
                 <div class="social-network-image">
-                    <img src="../../Images/social-logo.png">
+                    <img src="../Images/social-logo.png">
                 </div>
             </div>
         </div>
@@ -107,14 +107,14 @@
                         <button>Add Camera</button>
                     </div>
                     <div class="header-options-language">
-                        <img src="../../Images/language-logo.png">
+                        <img src="../Images/language-logo.png">
                     </div>
                     <div class="header-options-notifications">
-                        <img src="../../Images/notification-logo.png">
+                        <img src="../Images/notification-logo.png">
                     </div>
                     <div class="header-options-leave">
                         <p>Leave</p>
-                        <img src="../../Images/logout-logo.png">
+                        <img src="../Images/logout-logo.png">
                     </div>
                 </div>
             </div>
@@ -414,7 +414,7 @@
                         <h1>Coming Soon!</h1>
                     </div>
                     <div class="coming-soon-icon">
-                        <img src="../../Images/construction-icon.png" alt="construction">
+                        <img src="../Images/construction-icon.png" alt="construction">
                     </div>
                 </div>
             </div>
@@ -425,7 +425,7 @@
                         <h1>Coming Soon!</h1>
                     </div>
                     <div class="coming-soon-icon">
-                        <img src="../../Images/construction-icon.png" alt="construction">
+                        <img src="../Images/construction-icon.png" alt="construction">
                     </div>
                 </div>
             </div>
@@ -436,7 +436,7 @@
                         <h1>Coming Soon!</h1>
                     </div>
                     <div class="coming-soon-icon">
-                        <img src="../../Images/construction-icon.png" alt="construction">
+                        <img src="../Images/construction-icon.png" alt="construction">
                     </div>
                 </div>
             </div>
@@ -453,7 +453,7 @@
                 <div class="footer-update">
                     <div class="footer-update-left">
                         <div class="footer-update-left-logo">
-                            <img src="../../Images/tick-logo.png">
+                            <img src="../Images/tick-logo.png">
                         </div>
                         <div class="footer-update-left-label">
                             something updated
@@ -461,7 +461,7 @@
                     </div>
                     <div class="footer-update-right">
                         <div class="footer-update-right-logo">
-                            <img src="../../Images/tick-logo.png">
+                            <img src="../Images/tick-logo.png">
                         </div>
                         <div class="footer-update-right-label">
                             camera updated
