--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -108,10 +108,10 @@
                     <div class="header-options-notifications">
                         <img src="../Images/notification-logo.png">
                     </div>
-                    <div class="header-options-leave">
+                    <button onclick="signOut()" class="header-options-leave">
                         <p>Leave</p>
                         <img src="../Images/logout-logo.png">
-                    </div>
+                    </button>
                 </div>
             </div>
 
