Unfinished general settings

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -405,13 +405,24 @@
             </div>
 
             <div class="panel" id="general">
-                <div class="coming-soon">
-                    <div class="coming-soon-header">
-                        <h1>Coming Soon!</h1>
-                    </div>
-                    <div class="coming-soon-icon">
-                        <img src="../Images/construction-icon.png" alt="construction">
-                    </div>
+                <div class="panel-general-account">
+                    <label for="firstname"> First Name:</label>
+                    <input type="text"  id="firstname" name="firstname" required maxlength="15" size="10"/>
+
+                    <label for="surname"> Surname:</label>
+                    <input type="text"  id="surname" name="surname" required maxlength="15" size="10"/>
+
+                    <label for="email"> Email:</label>
+                    <input type="text"  id="email" name="email" required maxlength="15" size="10"/>
+
+                    <label for="region"> Region/Country:</label>
+                    <input type="text"  id="region" name="region" required maxlength="15" size="10"/>
+
+                    <label for="reference-code"> Reference Code:</label>
+                    <input type="text"  id="reference-code" name="reference-code" required maxlength="15" size="10"/>
+
+                    <label for="upload-logo"> Upload logo:</label>
+                    <input type="text"  id="upload-logo" name="upload-logo" required maxlength="15" size="10"/>
                 </div>
             </div>
 
