added placeholders in  profile page

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -53,10 +53,10 @@
                     <button href="#general" onclick="showContainerIndex('general')"
                         class="menu-options-settings-general">
                         <div class="menu-options-settings-general-icon">
-                            <img src="../Images/general-logo.png">
+                            <img src="../Images/profile-logo.png">
                         </div>
                         <div class="menu-options-settings-general-text">
-                            <p>General</p>
+                            <p>Profile</p>
                         </div>
                     </button>
                     <button href="#security" onclick="showContainerIndex('security')"
@@ -328,6 +328,42 @@
                                             <td>2024-04-19 11:20:33</td>
                                             <td>N/A</td>
                                         </tr>
+                                        <tr>
+                                            <td>78%</td>
+                                            <td><a href="#">CamX-6000</a></td>
+                                            <td>2024-04-19 11:20:33</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>78%</td>
+                                            <td><a href="#">CamX-6000</a></td>
+                                            <td>2024-04-19 11:20:33</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>78%</td>
+                                            <td><a href="#">CamX-6000</a></td>
+                                            <td>2024-04-19 11:20:33</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>78%</td>
+                                            <td><a href="#">CamX-6000</a></td>
+                                            <td>2024-04-19 11:20:33</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>78%</td>
+                                            <td><a href="#">CamX-6000</a></td>
+                                            <td>2024-04-19 11:20:33</td>
+                                            <td>N/A</td>
+                                        </tr>
+                                        <tr>
+                                            <td>78%</td>
+                                            <td><a href="#">CamX-6000</a></td>
+                                            <td>2024-04-19 11:20:33</td>
+                                            <td>N/A</td>
+                                        </tr>
                                         <!-- Repeat this pattern for all rows of your data -->
                                     </tbody>
                                 </table>
@@ -433,7 +469,7 @@
                             <input type="text" id="email" name="email">
                         </div>
                         <div class="panel-general-account-country">
-                            <label for="input-region">Country/Region *</label>
+                            <label for="input-region">Country / Region</label>
                             <select name="input-region" id="input-region">
                                 <option value="Norte">Norte</option>
                                 <option value="Centro">Centro</option>
@@ -465,7 +501,7 @@
                 <div class="panel-security">
                     <div class="panel-security-information">
                         <div class="panel-security-information-label">
-                            <h1>Security And Login</h1>
+                            <h1>Security and Login</h1>
                         </div>
                         <div class="panel-security-information-form">
                             <div class="panel-security-information-current-password">
