--- a/Public/Pages/authentication.html
+++ b/Public/Pages/authentication.html
@@ -29,29 +29,29 @@
 
             <div class="panel-auth" id="register">
                 <div class="panel-auth-container">
-                    <div class="panel-auth-container-register">
+                    <form id="form-register" class="panel-auth-container-register">
                         <div class="panel-auth-container-register-form">
                             <div class="panel-auth-container-register-form-base-info">
                                 <div class="panel-auth-container-register-form-base-info-name">
                                     <div class="panel-auth-container-register-form-base-info-name-first">
-                                        <label for="input-fname">First name</label>
+                                        <label for="input-fname">First name *</label>
                                         <input type="text" id="input-fname">
                                     </div>                                    
                                     <div class="panel-auth-container-register-form-base-info-name-last">
-                                        <label for="input-lname">Last name</label>
+                                        <label for="input-lname">Last name *</label>
                                         <input type="text" id="input-lname">
                                     </div>                                    
                                 </div>
                                 <div class="panel-auth-container-register-form-base-info-email">
-                                    <label for="input-email">Email</label>
+                                    <label for="input-email">Email *</label>
                                     <input type="email" id="input-email">
                                 </div>
                                 <div class="panel-auth-container-register-form-base-info-password">
-                                    <label for="input-pass">Password</label>
+                                    <label for="input-pass">Password *</label>
                                     <input type="password" id="input-pass">
                                 </div>
                                 <div class="panel-auth-container-register-form-base-info-confirm-password">
-                                    <label for="input-cpass">Confirm password</label>
+                                    <label for="input-cpass">Confirm password *</label>
                                     <input type="password" id="input-cpass">
                                 </div>
                             </div>
@@ -62,11 +62,11 @@
                                 </div>
                                 <div class="panel-auth-container-register-form-contact-info-info">
                                     <div class="panel-auth-container-register-form-contact-info-info-phone">
-                                        <label for="input-phone">Phone number</label>
-                                        <input type="text" id="input-phone">
+                                        <label for="input-phone">Phone number *</label>
+                                        <input type="number" id="input-phone">
                                     </div>
                                     <div class="panel-auth-container-register-form-contact-info-info-region">
-                                        <label for="input-region">Select your region</label>
+                                        <label for="input-region">Select your region *</label>
                                         <select name="input-region" id="input-region">
                                             <option value="Norte">Norte</option>
                                             <option value="Centro">Centro</option>
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                                 <div class="panel-auth-container-register-form-contact-info-terms">
-                                    <p>By clicking here, you <b>agree</b> to our terms of service and privacy policy</p>
+                                    <p>By clicking here, you <b>agree</b> to our terms of service and privacy policy *</p>
                                     <input type="checkbox" name="input-terms" id="input-terms">
                                 </div>
                             </div>
@@ -91,13 +91,13 @@
                             <p>Have an account?</p>
                             <a href="#login" onclick="showContainerAuthentication('login')">&nbsp;<b>Log in</b></a>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
 
             <div class="panel-auth" id="login">
                 <div class="panel-auth-container">
-                    <div class="panel-auth-container-register">
+                    <form class="panel-auth-container-register">
                         <div class="panel-auth-container-register-form">
                             <div class="panel-auth-container-register-form-base-info">
                                 <div class="panel-auth-container-register-form-base-info-email">
@@ -117,7 +117,7 @@
                             <p>Don't have an account?</p>
                             <a href="#register" onclick="showContainerAuthentication('register')">&nbsp;<b>Sign up</b></a>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
 
