--- a/Public/Pages/authentication.html
+++ b/Public/Pages/authentication.html
@@ -89,7 +89,7 @@
                         </div>
                         <div class="panel-auth-container-register-altlogin">
                             <p>Have an account?</p>
-                            <a href="#login" onclick="showContainerAuthentication('login')">&nbsp;<b>Log in</b></a>
+                            <a onclick="showContainerAuthentication('login')">&nbsp;<b>Log in</b></a>
                         </div>
                     </form>
                 </div>
@@ -101,11 +101,11 @@
                         <div class="panel-auth-container-register-form">
                             <div class="panel-auth-container-register-form-base-info">
                                 <div class="panel-auth-container-register-form-base-info-email">
-                                    <label for="input-email">Email</label>
+                                    <label for="login-input-email">Email</label>
                                     <input type="email" id="login-input-email" required>
                                 </div>
                                 <div class="panel-auth-container-register-form-base-info-password">
-                                    <label for="input-passs">Password</label>
+                                    <label for="login-input-pass">Password</label>
                                     <input type="password" id="login-input-pass" required>
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                         </div>
                         <div class="panel-auth-container-register-altlogin">
                             <p>Don't have an account?</p>
-                            <a href="#register" onclick="showContainerAuthentication('register')">&nbsp;<b>Sign up</b></a>
+                            <a onclick="showContainerAuthentication('register')">&nbsp;<b>Sign up</b></a>
                         </div>
                     </form>
                 </div>
