--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -506,16 +506,16 @@
                         <form class="panel-security-information-form">
                             <div class="panel-security-information-current-password">
                                 <p>Current Password</p>
-                                <input id="input-current-password" required>
+                                <input type="password" id="input-current-password" required>
                             </div>
                             <div class="panel-security-information-new-password">
                                 <p>New Password</p>
-                                <input id="input-new-password" required>
+                                <input type="password" id="input-new-password" required>
                             </div>
 
                             <div class="panel-security-information-confirm-password">
                                 <p>Confirm New Password</p>
-                                <input id="input-confirm-password" required>
+                                <input type="password" id="input-confirm-password" required>
                             </div>
                             <div class="panel-security-information-change">
                                 <button type="button" onclick="changePassword()">Change</button>
