--- a/Public/Pages/authentication.html
+++ b/Public/Pages/authentication.html
@@ -124,7 +124,7 @@
             <div class="footer-auth">
                 <div class="footer-info">
                     <div class="footer-info-top">
-                        <p>Leitek | UAL @ Academic Project</p>
+                        <p>Leitek | UAL @ Academic Project | build <label id="application-version"></label></p>
                     </div>
                     <div class="footer-info-bottom">
                         <p>Gonçalo Vidal | João Paulo | Duarte Rodrigues | João Calisto</p>
