added delete account func

--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -535,7 +535,7 @@
                                     <p>Delete your account and account data</p>
                                 </div>
                                 <div class="panel-security-danger-delete-account-button">
-                                    <button type="button" >Delete Account</button>
+                                    <button type="button" onclick="deleteAccount()" >Delete Account</button>
                                 </div>
                             </div>
                         </div>
