added labels and inputs in add camera

--- a/Public/Pages/authentication.html
+++ b/Public/Pages/authentication.html
@@ -63,7 +63,7 @@
                                 <div class="panel-auth-container-register-form-contact-info-info">
                                     <div class="panel-auth-container-register-form-contact-info-info-phone">
                                         <label for="input-phone">Phone number *</label>
-                                        <input type="number" id="input-phone" required>
+                                        <input type="tel" id="input-phone" required>
                                     </div>
                                     <div class="panel-auth-container-register-form-contact-info-info-region">
                                         <label for="input-region">Select your region *</label>
