--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -177,28 +177,28 @@
                 </div>
                 <div class="add-camera-menu-options">
                     <div class="add-camera-menu-options-left">
-                        <p>Friendly Name</p>
-                        <input>
-                        <p>Country</p>
-                        <input>
-                        <p>Brand and Model</p>
-                        <input>
-                        <p>Camera web Admin URL</p>
-                        <input>
+                        <label for="add-camera-camera-name">Friendly Name*</label>
+                        <input type="text" id="add-camera-camera-name" placeholder="Friendly Name" required>
+                        <label for="add-camera-country">Country*</label>
+                        <input type="text" id="add-camera-country" placeholder="Select Country" required>
+                        <label for="add-camera-brand-model">Brand & Model</label>
+                        <input type="text" id="add-camera-brand-model" placeholder="Brand & Model">
+                        <label for="add-camera-admin-url">Camera Web Admin URL</label>
+                        <input type="text" id="add-camera-admin-url" placeholder="https://">
                     </div>
                     <div class="add-camera-menu-options-right">
-                        <p>GPS Location</p>
-                        <input>
-                        <p>Site Name</p>
-                        <input>
-                        <p>Azimuth / Bearing</p>
-                        <input>
-                        <p>Camera Public IP Address</p>
-                        <input>
+                        <label for="add-camera-location">GPS Location*</label>
+                        <input type="text" id="add-camera-location" placeholder="GPS Location">
+                        <label for="add-camera-site-url">Site Name</label>
+                        <input type="text" id="add-camera-site-url" placeholder="Site Name">
+                        <label for="add-camera-azimuth-bearing">Azimuth / Bearing</label>
+                        <input type="text" id="add-camera-azimuth-bearing" value="0">
+                        <label for="add-camera-public-ip">Camera Public IP Address</label>
+                        <input type="text" id="add-camera-public-ip" placeholder="Camera Public IP Address">
                     </div>
                 </div>
                 <div class="add-camera-menu-button">
-                    <button>Add Camera</button>
+                    <button type="button">Add Camera</button>
                 </div>
             </div>
 
