--- a/Public/Pages/index.html
+++ b/Public/Pages/index.html
@@ -288,57 +288,8 @@
                             </div>
                             <div class="tbl-content">
                                 <table cellpadding="0" cellspacing="0">
-                                    <tbody>
-                                        <!-- Paste your data here -->
-                                        <tr>
-                                            <td><a href="#">CamX-2000</a></td>
-                                            <td>2024-04-15 08:45:12</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-3000</a></td>
-                                            <td>2024-04-16 14:22:55</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-1000</a></td>
-                                            <td>2024-04-17 10:11:36</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-4000</a></td>
-                                            <td>2024-04-18 09:30:48</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-5000</a></td>
-                                            <td>2024-04-18 15:55:21</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-7000</a></td>
-                                            <td>2024-04-20 16:44:45</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-8000</a></td>
-                                            <td>2024-04-21 08:15:57</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-9000</a></td>
-                                            <td>2024-04-22 13:38:09</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-10000</a></td>
-                                            <td>2024-04-23 10:09:21</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-11000</a></td>
-                                            <td>2024-04-24 15:32:33</td>
-                                        </tr>
-                                        <tr>
-                                            <td><a href="#">CamX-12000</a></td>
-                                            <td>2024-04-25 12:03:45</td>
-                                        </tr>
-                                        <!-- Repeat this pattern for all rows of your data -->
+                                    <tbody id="dynamicListCamera-dashboard-last-detection">
+                                        <!-- Dynamic data here -->
                                     </tbody>
                                 </table>
                             </div> <!-- End Table Here -->
@@ -362,91 +313,19 @@
                                 <table cellpadding="0" cellspacing="0">
                                     <thead>
                                         <tr>
+                                            <th>Camera ID</th>
                                             <th>Sensitivity</th>
-                                            <th>Camera</th>
+                                            <th>Camera Name</th>
                                             <th>Last Detected</th>
-                                            <th>30 Day Status</th>
+                                            <th>Current Status</th>
                                         </tr>
                                     </thead>
                                 </table>
                             </div>
                             <div class="tbl-content-large" id="searchDashboard">
                                 <table cellpadding="0" cellspacing="0">
-                                    <tbody>
-                                        <!-- Paste your data here -->
-                                        <tr>
-                                            <td>70%</td>
-                                            <td><a href="#">CamX-2000</a></td>
-                                            <td>2024-04-15 08:45:12</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>75%</td>
-                                            <td><a href="#">CamX-3000</a></td>
-                                            <td>2024-04-16 14:22:55</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>80%</td>
-                                            <td><a href="#">CamX-1000</a></td>
-                                            <td>2024-04-17 10:11:36</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>65%</td>
-                                            <td><a href="#">CamX-4000</a></td>
-                                            <td>2024-04-18 09:30:48</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>72%</td>
-                                            <td><a href="#">CamX-5000</a></td>
-                                            <td>2024-04-18 15:55:21</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <!-- Repeat this pattern for all rows of your data -->
+                                    <tbody id="dynamicListCamera-dashboard">
+                                        <!-- Dynamic data here -->
                                     </tbody>
                                 </table>
                             </div> <!-- End Table Here -->
@@ -473,55 +352,19 @@
                                 <table cellpadding="0" cellspacing="0">
                                     <thead>
                                         <tr>
+                                            <th>Camera ID</th>
                                             <th>Sensitivity</th>
-                                            <th>Camera</th>
+                                            <th>Camera Name</th>
                                             <th>Last Detected</th>
-                                            <th>30 Day Status</th>
+                                            <th>Current Status</th>
                                         </tr>
                                     </thead>
                                 </table>
                             </div>
                             <div class="tbl-content-large" id="searchMyCameras">
                                 <table cellpadding="0" cellspacing="0">
-                                    <tbody>
-                                        <!-- Paste your data here -->
-                                        <tr>
-                                            <td>70%</td>
-                                            <td><a href="#">CamX-2000</a></td>
-                                            <td>2024-04-15 08:45:12</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>75%</td>
-                                            <td><a href="#">CamX-3000</a></td>
-                                            <td>2024-04-16 14:22:55</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>80%</td>
-                                            <td><a href="#">CamX-1000</a></td>
-                                            <td>2024-04-17 10:11:36</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>65%</td>
-                                            <td><a href="#">CamX-4000</a></td>
-                                            <td>2024-04-18 09:30:48</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>72%</td>
-                                            <td><a href="#">CamX-5000</a></td>
-                                            <td>2024-04-18 15:55:21</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <tr>
-                                            <td>78%</td>
-                                            <td><a href="#">CamX-6000</a></td>
-                                            <td>2024-04-19 11:20:33</td>
-                                            <td>N/A</td>
-                                        </tr>
-                                        <!-- Repeat this pattern for all rows of your data -->
+                                    <tbody id="dynamicListCamera-mycameras">
+                                        <!-- Dynamic data here -->
                                     </tbody>
                                 </table>
                             </div> <!-- End Table Here -->
